# minecraft-autoupdate

./: .gitignore  README.md  handle_neoforge.py  main.py  pyproject.toml  requirements.txt  setup.py
data/: mods_input.json
src/data/: mods_input.json
src/mc_autoupdater/: __main__.py  auto_update.py  handle_mods.py  handle_neoforge.py  sessions.py
src/minecraft_autoupdater/: cli.py  handle_mods.py  handle_neoforge.py  sessions.py
src/minecraft_autoupdater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
